# msgpack-c

./: .gitignore  .travis.yml  CMakeLists.txt  MsgPackConfig.cmake.in  README.md  appveyor.yml  bootstrap  configure.in  preprocess  unpack_define.h  unpack_template.h
.github/workflows/: gha.yml
ci/: build_autotools.sh  build_cmake.sh
cpp11/: define.hpp  tuple.hpp  zone.hpp
erb/: cpp03_define.hpp.erb  cpp03_msgpack_tuple.hpp.erb  cpp03_zone.hpp.erb
erb/v1/: cpp03_zone.hpp.erb  cpp03_zone_decl.hpp.erb~
erb/v2/: cpp_zone_decl.hpp.erb
example/: CMakeLists.txt  protocol.cc
example/boost/: CMakeLists.txt
example/c/: CMakeLists.txt
example/cpp03/: CMakeLists.txt  map_based_versionup.cpp  speed_test_nested_array.cpp  stream.cpp
example/cpp11/: CMakeLists.txt
example/x3/: CMakeLists.txt
include/: msgpack.hpp
include/msgpack/: cpp_config.hpp  create_object_visitor.hpp  fbuffer.hpp  iterator.hpp  object.h  object.hpp  object_fwd.hpp  pack.h  pack.hpp  pack_define.h  pack_template.h  parse.hpp  sbuffer.hpp  sysdep.h  type.hpp  type_fwd.hpp  unpack.hpp  versioning.hpp  vrefbuffer.hpp  x3_unpack.hpp  zbuffer.hpp  zone.hpp
include/msgpack/adaptor/: adaptor_base.hpp  define_decl.hpp  fixint.hpp  nil.hpp  nil_fwd.hpp  raw.hpp
include/msgpack/adaptor/boost/: msgpack_variant.hpp
include/msgpack/adaptor/cpp11/: unordered_map.hpp  unordered_set.hpp
include/msgpack/adaptor/detail/: cpp03_define.hpp  cpp03_msgpack_tuple.hpp  cpp11_define.hpp  cpp11_msgpack_tuple.hpp
include/msgpack/adaptor/tr1/: unordered_map.hpp  unordered_set.hpp
include/msgpack/detail/: cpp03_zone.hpp  cpp11_zone.hpp
include/msgpack/v1/: cpp_config_decl.hpp  object.hpp  object_decl.hpp  object_fwd.hpp  unpack.hpp  unpack_decl.hpp  vrefbuffer.hpp
include/msgpack/v1/adaptor/: check_container_size_decl.hpp  ext.hpp  nil.hpp
include/msgpack/v2/: cpp_config_decl.hpp  null_visitor_decl.hpp  object_decl.hpp  object_fwd_decl.hpp  parse.hpp  parse_decl.hpp  unpack.hpp  unpack_decl.hpp  x3_unpack_decl.hpp
include/msgpack/v3/: null_visitor_decl.hpp  parse.hpp  parse_decl.hpp  parse_return.hpp  unpack.hpp  unpack_decl.hpp  x3_unpack_decl.hpp
include/v1/msgpack/: cpp_config.hpp  cpp_config_decl.hpp  fbuffer.hpp  fbuffer_decl.hpp  iterator.hpp  iterator_decl.hpp  object.hpp  object_decl.hpp  object_fwd.hpp  object_fwd_decl.hpp  pack.hpp  pack_decl.hpp  sbuffer.hpp  sbuffer_decl.hpp
include/v2/msgpack/: cpp_config.hpp  fbuffer.hpp  iterator.hpp  object.hpp  object_fwd.hpp  pack.hpp  sbuffer.hpp
src/: Makefile.am  msgpack.hpp  object.cpp  objectc.c  unpack.c
src/msgpack/: cpp_config.hpp  object.h  object.hpp  pack.h  pack.hpp  pack_template.h  sbuffer.h  sbuffer.hpp  sysdep.h  type.hpp  unpack.h  unpack.hpp  vrefbuffer.h  vrefbuffer.hpp  zbuffer.h  zbuffer.hpp  zone.h  zone.hpp.erb
src/msgpack/type/: bool.hpp  define.hpp.erb  deque.hpp  fixint.hpp  float.hpp  int.hpp  list.hpp  map.hpp  nil.hpp  pair.hpp  raw.hpp  set.hpp  string.hpp  tuple.hpp.erb  vector.hpp
test/: CMakeLists.txt  Makefile.am  boost_optional.cpp  boost_string_ref.cpp  convert.cc  fixint.cc  int_head.cpp  int_head_c.cpp  iterator_cpp11.cpp  limit.cpp  msgpack_cpp11.cpp  msgpack_test.cpp  msgpack_x3_parse.cpp  object.cc  object_with_zone.cpp  pack_unpack.cc  pack_unpack.cpp  streaming.cc  streaming.cpp  streaming_c.cpp  unpack_visitor.cpp  user_class.cpp  visitor.cpp  zone.cc
(+18 files in other folders)
